added new updates to dad's website

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
     />
-    <!-- <meta property="og:title" content="Let's Work Together" />
-    <meta property="og:description" content="Offering Web Page Development" />
-    <meta
+    <meta property="og:title" content="MERCADO'S Consultant Service" />
+    <meta property="og:description" content="For All Your Educational Medical and Professional Needs" />
+    <!-- <meta
       property="og:image"
       content=" https://rocky-recon.github.io/Portfolio/img/2.jpg"
-    />
+    /> -->
     <meta
       property="og:url"
-      content=" https://rocky-recon.github.io/Portfolio/"
-    /> -->
-    <meta property="og:type " content="website" />
+      content="https://rocky-recon.github.io/MercadosConsultingService/"
+    />
+    <meta property="og:type " content="Medical Consultation" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -32,7 +32,7 @@
     <!-- My own CSS -->
     <link rel="stylesheet" href="./Styles/styles.css" />
 
-    <title>Mercado's Consulting Service</title>
+    <title>MERCADO'S Consultant Service</title>
   </head>
   <body cz-shortcut-listen="true">
     <!-- Navigation -->
@@ -116,10 +116,10 @@
         id="hStyle"
       >
         <div class="col-md-5 p-lg-5 mx-auto my-5">
-          <h1 class="display-4 fw-normal">Mercado's Consulting Service</h1>
+          <h1 class="display-4 fw-normal">MERCADO'S Consultant Service</h1>
           <p class="lead fw-normal">
             Offering over 30 years of medical experience to you with Mobile
-            Service.
+            Service. For All of Your Educational Medical and Professional Needs
           </p>
         </div>
       </div>
@@ -141,7 +141,7 @@
             Having lived in the Rio Grande Valley all of my life, I have always
             had a passion for providing healthcare to those most in need. <br />
             As a Nurse Practicioner, I can provide the similar services as those
-            you would find in a hospital. <br />
+            you would find in a Office. <br />
             Please take a look at the services we provide at Mercado's
             Consulting Service!
           </p>
@@ -171,7 +171,7 @@
               <li>Pediactrics First Aid</li>
             </ul>
             <button type="button" class="w-100 btn btn-lg btn-outline-primary">
-              Sign Up
+              <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
             </button>
           </div>
         </div>
@@ -185,7 +185,7 @@
               <li>Two day turnaround</li>
             </ul>
             <button type="button" class="w-100 btn btn-lg btn-outline-primary">
-              Sign Up
+              <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
             </button>
           </div>
         </div>
@@ -196,12 +196,12 @@
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
               <li>BP Reading</li>
-              <li>Vital Science</li>
+              <li>Vital Signs</li>
               <li>Prescriptions</li>
               <li>Labs</li>
             </ul>
             <button type="button" class="w-100 btn btn-lg btn-outline-primary">
-              Sign Up
+              <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
             </button>
           </div>
         </div>
@@ -215,8 +215,9 @@
               <li>number</li>
               <li>Experation:</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary">
-              Sign Up
+            <button type="button" class="w-100 btn btn-lg btn-outline-primary" >
+              <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
+              
             </button>
           </div>
         </div>
@@ -227,14 +228,14 @@
     <footer class="pt-4 my-md-5 pt-md-5 border-top" id="contact">
         <div class="row">
             <div class="col-6 col-md">
-                <img src="./img/logo.png" alt="" width="150" height="150">
+                <img src="./img/logo.png" alt="" width="120" height="80">
                 <small class="d-block mb-3 text-muted">&#169 2021</small>
             </div>
             <div class="col-6 col-md " id="_aMe ">
                 <h5>Contact</h5>
                 <ul class="list-unstyled text-small">
                     <li class="mb-1">
-                        <a href="pmercadorn@yahoo.com" class="">Email</a>
+                        <a href="mailto:pmercadorn@yahoo.com" class="">Email</a>
                     </li>
                     <li class="mb-1">
                         <a href="">Phone Number: 956-521-0620</a>
