--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
         <div class="card mb-4 rounded-3 shado-sm">
           <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">TB Vaccine</h4>
+            <h4 class="my-0 fw-normal">TB Test</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
