updated marks changes

--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
       <div class="row" id="_aMe">
         <div class="card" style="align-items: center">
           <!-- Pedro's headshot -->
-          <img src="./img/IMG_1587.jpeg" alt="Pedro" style="width: 50%" />
+          <img src="./img/headshot.jpeg" alt="Pedro" style="width: 50%" />
           <h2>Pedro Mercado</h2>
-          <p class="card-title">Nurse Praticioner</p>
+          <p class="card-title">Nurse Practitioner</p>
           <p>
             Emphatic medical professionals with 30+ years in the healthcare
             industry. <br />
             Having lived in the Rio Grande Valley all of my life, I have always
             had a passion for providing healthcare to those most in need. <br />
-            As a Nurse Practicioner, I can provide the similar services as those
+            As a Nurse Practitioner, I can provide the similar services as those
             you would find in a Office. <br />
             Please take a look at the services we provide at Mercado's
             Consulting Service!
@@ -160,6 +160,7 @@
       </div>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <!-- <div class="col"> -->
+          <!-- First Aid -->
         <div class="card mb-4 rounded-3 shado-sm">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">First Aid</h4>
@@ -170,11 +171,14 @@
               <li>Adult First Aid</li>
               <li>Pediactrics First Aid</li>
             </ul>
+          </div>
+          <div class="card-footer">
             <button type="button" class="w-100 btn btn-lg btn-outline-primary">
               <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
             </button>
           </div>
         </div>
+        <!-- TB Test -->
         <div class="card mb-4 rounded-3 shado-sm">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">TB Test</h4>
@@ -184,11 +188,14 @@
               <li>Screen Test</li>
               <li>Two day turnaround</li>
             </ul>
+          </div>
+          <div class="card-footer">
             <button type="button" class="w-100 btn btn-lg btn-outline-primary">
               <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
             </button>
           </div>
         </div>
+        <!-- FNP visit -->
         <div class="card mb-4 rounded-3 shado-sm">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">FNP visit</h4>
@@ -200,11 +207,14 @@
               <li>Prescriptions</li>
               <li>Labs</li>
             </ul>
+          </div>
+          <div class="card-footer">
             <button type="button" class="w-100 btn btn-lg btn-outline-primary">
               <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
             </button>
           </div>
         </div>
+        <!-- Notary Public -->
         <div class="card mb-4 rounded-3 shado-sm">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">Notary Public</h4>
@@ -215,6 +225,8 @@
               <li>number</li>
               <li>Experation:</li>
             </ul>
+          </div>
+          <div class="card-footer">
             <button type="button" class="w-100 btn btn-lg btn-outline-primary" >
               <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
               
