small updates and photos are working

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     />
     <meta property="og:title" content="MERCADO'S Consultant Service" />
     <meta property="og:description" content="For All Your Educational Medical and Professional Needs" />
-    <!-- <meta
+    <meta
       property="og:image"
-      content=" https://rocky-recon.github.io/Portfolio/img/2.jpg"
-    /> -->
+      content="https://rocky-recon.github.io/MercadosConsultingService/img/logo"
+    />
     <meta
       property="og:url"
       content="https://rocky-recon.github.io/MercadosConsultingService/"
@@ -132,7 +132,8 @@
       <div class="row" id="_aMe">
         <div class="card" style="align-items: center">
           <!-- Pedro's headshot -->
-          <img src="./img/headshot.jpeg" alt="Pedro" style="width: 50%" />
+          <img src="/img/headshot.jpg"  class="img-fluid"
+          alt="" style="width: 50%" />
           <h2>Pedro Mercado</h2>
           <p class="card-title">Nurse Practitioner</p>
           <p>
@@ -159,11 +160,11 @@
         </p>
       </div>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-        <!-- <div class="col"> -->
           <!-- First Aid -->
         <div class="card mb-4 rounded-3 shado-sm">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">First Aid</h4>
+            <p class="text-muted">English and Spanish</p>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
@@ -178,10 +179,32 @@
             </button>
           </div>
         </div>
+        <!-- CPR Course  -->
+        <div class="card mb-4 rounded-3 shado-sm">
+        <div class="card-header py-3">
+          <h4 class="my-0 fw-normal">CPR</h4>
+          <p class="text-muted">English and Spanish</p>
+        </div>
+        <div class="card-body">
+          <ul class="list-unstyled mt-3 mb-4">
+            <li>BLS</li>
+            <li>BLS initial or renewal</li>
+            <li>In person courses available</li>
+            <li>Hearcore courses available</li>
+            <li>Heart saver</li>
+          </ul>
+        </div>
+        <div class="card-footer">
+          <button type="button" class="w-100 btn btn-lg btn-outline-primary">
+            <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
+          </button>
+        </div>
+      </div>
         <!-- TB Test -->
         <div class="card mb-4 rounded-3 shado-sm">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">TB Test</h4>
+            <p class="text-muted">English and Spanish</p>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
@@ -199,6 +222,7 @@
         <div class="card mb-4 rounded-3 shado-sm">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">FNP visit</h4>
+            <p class="text-muted">English and Spanish</p>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
@@ -218,6 +242,7 @@
         <div class="card mb-4 rounded-3 shado-sm">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">Notary Public</h4>
+            <p class="text-muted">English and Spanish</p>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
@@ -233,11 +258,10 @@
             </button>
           </div>
         </div>
-        <!-- </div> -->
       </div>
     </section>
     <!-- Contact -->
-    <footer class="pt-4 my-md-5 pt-md-5 border-top" id="contact">
+    <footer class="px-3 pt-4 my-md-5 pt-md-5 border-top" id="contact">
         <div class="row">
             <div class="col-6 col-md">
                 <img src="./img/logo.png" alt="" width="120" height="80">
