--- a/index.html
+++ b/index.html
@@ -132,11 +132,14 @@
       <div class="row" id="_aMe">
         <div class="card" style="align-items: center">
           <!-- Pedro's headshot -->
+          <div class="card-image-top">
           <img src="/img/headshot.jpg"  class="img-fluid"
           alt="" style="width: 50%" />
-          <h2>Pedro Mercado</h2>
+          <h2 class="card-title" style="font-size: bold;">Pedro Mercado</h2>
+          <div class="card-body">
+         
           <p class="card-title">Nurse Practitioner</p>
-          <p>
+          <p class="card-text">
             Emphatic medical professionals with 30+ years in the healthcare
             industry. <br />
             Having lived in the Rio Grande Valley all of my life, I have always
@@ -147,6 +150,8 @@
             Consulting Service!
           </p>
         </div>
+        </div>
+      </div>
       </div>
     </section>
     <!-- Service -->
