updating portfolio picture

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="card" style="align-items: center" id="_aMe">
           <!-- Pedro's headshot -->
           <div class="card-image-top text-cennter">
-          <img src="/img/headshot.jpg"  class="rounded"
+          <img src="/img/headshot.jpg"  class="rounded img-fluid"
           alt="" style="width: 50%" />
           
           <div class="card-body">
