update to css for main image

--- a/index.html
+++ b/index.html
@@ -100,17 +100,15 @@
     <section id="about">
       <div class="container text-center">
         <h1>Who Are We</h1>
-    
       <div class="row" >
         <div class="card" style="align-items: center" id="_aMe">
           <!-- Pedro's headshot -->
           <div class="card-image-top text-cennter">
           <img src="/img/headshot.jpg"  class="rounded img-fluid"
           alt="" style="width: 50%" />
-          
           <div class="card-body">
             <h2 class="card-title" style="font-size: bold;">Pedro Mercado</h2>
-          <p class="card-title">Nurse Practitioner</p>
+          <p class="card-text">Nurse Practitioner</p>
           <p class="card-text">
             Emphatic medical professionals with 30+ years in the healthcare
             industry. <br />
@@ -242,11 +240,11 @@
     <footer class="px-3 pt-4 my-md-5 pt-md-5 border-top" id="contact">
         <div class="row">
             <div class="col-6 col-md">
-                <img src="./img/logo.png" alt="" width="120" height="80">
+                <img src="./img/mcs.png" alt="" width="110" height="100">
                 <small class="d-block mb-3 text-muted">&#169 2021</small>
             </div>
             <div class="col-6 col-md " id="_aMe ">
-                <h5>Contact</h5>
+                <h2>Contact</h2>
                 <ul class="list-unstyled text-small">
                     <li class="mb-1">
                         <a href="mailto:pmercadorn@yahoo.com" class="">Email</a>
@@ -257,7 +255,6 @@
                 </ul>
             </div>
         </div>
-
     </footer>
     <script src="./Scripts/script.js"></script>
   </body>
