--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <div class="card" style="align-items: center" id="_aMe">
           <!-- Pedro's headshot -->
           <div class="card-image-top text-cennter">
-          <img src="/img/headshot.jpg"  class="rounded img-fluid"
-          alt="" style="width: 50%" />
+          <img src="/img/headshotPedro.png"  class="rounded img-fluid"
+          alt="" />
           <div class="card-body">
             <h2 class="card-title" style="font-size: bold;">Pedro Mercado</h2>
           <p class="card-text">Nurse Practitioner</p>
