updating about us card

--- a/index.html
+++ b/index.html
@@ -101,15 +101,16 @@
       <div class="container text-center">
         <h1>Who Are We</h1>
       <div class="row" >
-        <div class="card" style="align-items: center" id="_aMe">
+        <div class="card" style="align-items: center;" id="_aMe">
           <!-- Pedro's headshot -->
           <div class="card-image-top text-cennter">
           <img src="/img/headshotPedro.png"  class="rounded img-fluid"
           alt="" />
+        </div>
           <div class="card-body">
             <h2 class="card-title" style="font-size: bold;">Pedro Mercado</h2>
           <p class="card-text">Nurse Practitioner</p>
-          <p class="card-text">
+          <p class="card-text text-muted">
             Emphatic medical professionals with 30+ years in the healthcare
             industry. <br />
             Having lived in the Rio Grande Valley all of my life, I have always
@@ -118,8 +119,7 @@
             you would find in a Office. <br />
             Please take a look at the services we provide at Mercado's
             Consulting Service!
-          </p>
-        </div>
+          </p>      
         </div>
       </div>
       </div>
