--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="card" style="align-items: center;" id="_aMe">
           <!-- Pedro's headshot -->
           <div class="card-image-top text-cennter">
-          <img src="/img/headshotPedro.png"  class="rounded img-fluid"
+          <img src="./img/headshotPedro.png"  class="rounded img-fluid"
           alt="" />
         </div>
           <div class="card-body">
