--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
       <div class="row" >
         <div class="card" style="align-items: center;" id="_aMe">
           <!-- Pedro's headshot -->
-          <div class="card-image-top text-cennter">
+          <div class="card-img-top text-cennter">
           <img src="./img/headshotPedro.png"  class="rounded img-fluid"
           alt="" />
         </div>
           <div class="card-body">
-            <h2 class="card-title" style="font-size: bold;">Pedro Mercado</h2>
+          <h2 class="card-title" style="font-size: bold;">Pedro Mercado</h2>
           <p class="card-text">Nurse Practitioner</p>
           <p class="card-text text-muted">
             Emphatic medical professionals with 30+ years in the healthcare
