--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       "
     >
       <nav class="navbar navbar-expand-lg" id="nav-bar">
-        <div class="navbar-nav" id="brand-container">
+        <!-- <div class="navbar-nav" id="brand-container">
         <h2 style="font-weight: bolder;">Mercado's Consultant Service</h2>
-        </div>
+        </div> -->
         <button
           class="navbar-toggler"
           type="button"
