--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <li>BLS</li>
             <li>BLS initial or renewal</li>
             <li>In person courses available</li>
-            <li>Hearcore courses available</li>
+            <li>Heartcore courses available</li>
             <li>Heart saver</li>
           </ul>
         </div>
