update to notary public

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <ul class="list-unstyled mt-3 mb-4">
               <li>Not a Lawyer</li>
               <li>number</li>
-              <li>Experation:</li>
+              <!-- <li>Experation:</li> -->
             </ul>
           </div>
           <div class="card-footer">
