--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
       </nav>
       <div
-      class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-cennter"
+      class="position-relative overflow-hidden text-cennter"
       id="hStyle"
     >
         <video class="videoInsert card-img" playsinline autoplay loop muted>
