updates to css and background

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       "
     >
       <nav class="navbar navbar-expand-lg" id="nav-bar">
-        <!-- <div class="navbar-nav" id="brand-container">
-        <h2 style="font-weight: bolder;">Mercado's Consultant Service</h2>
-        </div> -->
+        <div class="navbar-nav" id="brand-container">
+        <img src="./img/logo.png" alt="" width="110" height="100">
+        </div>
         <button
           class="navbar-toggler"
           type="button"
@@ -80,21 +80,17 @@
           </ul>
         </div>
       </nav>
-      <div
-      class="position-relative overflow-hidden text-cennter"
-      id="hStyle"
-    >
-        <video class="videoInsert card-img" playsinline autoplay loop muted>
-          <source src="./img/mcsMain.mp4" type="video/mp4" />
-          <source src="movie.ogg" type="video/ogg" />
-          Your browser does not support the video tag.
-        </video>
-    </div>
+     <div class="jumbotron" id="head">
+       <h1 style="font-weight: bolder;">Mercado's Consultant Service</h1>
+       <p > 
+         Offering over 30 years of medicial experience to you with Mobile Service.</p>
+       <p >For All of your Educational Medical and Professional Needs.</p>
+     </div>
     </header>
     <!-- About -->
     <section id="about">
       <div class="container text-center">
-        <h1>Who Are We</h1>
+        <h1 style="font-weight: bolder;">Who Are We</h1>
       <div class="row" >
         <div class="card" style="align-items: center;" id="_aMe">
           <!-- Pedro's headshot -->
@@ -103,9 +99,9 @@
           alt="" />
         </div>
           <div class="card-body">
-          <h2 class="card-title" style="font-size: bold;">Pedro Mercado</h2>
+          <h2 class="card-title" style="font-weight: bolder;">Pedro Mercado</h2>
           <p class="card-text">Nurse Practitioner</p>
-          <p class="card-text text-muted">
+          <p class="card-text">
             Emphatic medical professionals with 30+ years in the healthcare
             industry. <br />
             Having lived in the Rio Grande Valley all of my life, I have always
@@ -123,8 +119,8 @@
     <!-- Service -->
     <section id="service">
       <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4 fw-normal">Services</h1>
-        <p class="fs-5 text-muted">
+        <h1 class="display-4" style="font-weight: bolder;">Services</h1>
+        <p class="fs-5 ">
           Below you will find the services that we provide. We are currently
           only <br />
           accepting cash or check. Thank you for understanding.
@@ -132,32 +128,32 @@
       </div>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
           <!-- First Aid -->
-        <div class="card mb-4 rounded-3 shado-sm">
+        <div class="card mb-4 rounded-3" id="cardbck">
           <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">First Aid</h4>
-            <p class="text-muted">English and Spanish</p>
+            <h4 class="my-0" style="font-weight: bolder;">First Aid</h4>
+            <p style="color: #29478d;">English and Spanish</p>
           </div>
           <div class="card-body">
-            <ul class="list-unstyled mt-3 mb-4">
+            <ul class="list-unstyled mt-3 mb-4" style="color: #29478d;">
               <li>CPR</li>
               <li>Adult First Aid</li>
               <li>Pediactrics First Aid</li>
             </ul>
           </div>
           <div class="card-footer">
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary">
-              <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
+            <button type="button" class="w-100 btn btn-lg ">
+              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>
             </button>
           </div>
         </div>
         <!-- CPR Course  -->
-        <div class="card mb-4 rounded-3 shado-sm">
+        <div class="card mb-4 rounded-3" id="cardbck">
         <div class="card-header py-3">
-          <h4 class="my-0 fw-normal">CPR</h4>
-          <p class="text-muted">English and Spanish</p>
+          <h4 class="my-0" style="font-weight: bolder;">CPR</h4>
+          <p style="color: #29478d;">English and Spanish</p>
         </div>
         <div class="card-body">
-          <ul class="list-unstyled mt-3 mb-4">
+          <ul class="list-unstyled mt-3 mb-4" style="color: #29478d;">
             <li>BLS</li>
             <li>BLS initial or renewal</li>
             <li>In person courses available</li>
@@ -166,37 +162,37 @@
           </ul>
         </div>
         <div class="card-footer">
-          <button type="button" class="w-100 btn btn-lg btn-outline-primary">
-            <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
+          <button type="button" class="w-100 btn btn-lg ">
+            <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>
           </button>
         </div>
       </div>
         <!-- TB Test -->
-        <div class="card mb-4 rounded-3 shado-sm">
+        <div class="card mb-4 rounded-3 " id="cardbck">
           <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">TB Test</h4>
-            <p class="text-muted">English and Spanish</p>
+            <h4 class="my-0" style="font-weight: bolder;">TB Test</h4>
+            <p style="color: #29478d;">English and Spanish</p>
           </div>
           <div class="card-body">
-            <ul class="list-unstyled mt-3 mb-4">
+            <ul class="list-unstyled mt-3 mb-4" style="color: #29478d;">
               <li>Screen Test</li>
               <li>Two day turnaround</li>
             </ul>
           </div>
           <div class="card-footer">
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary">
-              <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
+            <button type="button" class="w-100 btn btn-lg">
+              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>
             </button>
           </div>
         </div>
         <!-- FNP visit -->
-        <div class="card mb-4 rounded-3 shado-sm">
+        <div class="card mb-4 rounded-3 " id="cardbck">
           <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">FNP visit</h4>
-            <p class="text-muted">English and Spanish</p>
+            <h4 class="my-0" style="font-weight: bolder;">FNP visit</h4>
+            <p style="color: #29478d;">English and Spanish</p>
           </div>
           <div class="card-body">
-            <ul class="list-unstyled mt-3 mb-4">
+            <ul class="list-unstyled mt-3 mb-4" style="color: #29478d;"> 
               <li>BP Reading</li>
               <li>Vital Signs</li>
               <li>Prescriptions</li>
@@ -204,52 +200,86 @@
             </ul>
           </div>
           <div class="card-footer">
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary">
-              <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
+            <button type="button" class="w-100 btn btn-lg">
+              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>
             </button>
           </div>
         </div>
         <!-- Notary Public -->
-        <div class="card mb-4 rounded-3 shado-sm">
+        <div class="card mb-4 rounded-3" id="cardbck">
           <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">Notary Public</h4>
-            <p class="text-muted">English and Spanish</p>
+            <h4 class="my-0" style="font-weight: bolder;">Notary Public</h4>
+            <p style="color: #29478d;">English and Spanish</p>
           </div>
           <div class="card-body">
-            <ul class="list-unstyled mt-3 mb-4">
+            <ul class="list-unstyled mt-3 mb-4" style="color: #29478d;" >
               <li>Not a Lawyer</li>
               <li>number</li>
               <!-- <li>Experation:</li> -->
             </ul>
           </div>
           <div class="card-footer">
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary" >
-              <a href="mailto:pmercadorn@yahoo.com">Sign Up</a>
-              
+            <button type="button" class="w-100 btn btn-lg" >
+              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>      
+            </button>
+          </div>
+        </div>
+         <!-- Notary Public -->
+         <div class="card mb-4 rounded-3" id="cardbck">
+          <div class="card-header py-3">
+            <h4 class="my-0" style="font-weight: bolder;">Mentorship</h4>
+            <p style="color: #29478d;">English and Spanish</p>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4" style="color: #29478d;" >
+              <li>Career Development</li>
+              <li>Business Management</li>
+              <!-- <li></li> -->
+            </ul>
+          </div>
+          <div class="card-footer">
+            <button type="button" class="w-100 btn btn-lg" >
+              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>      
             </button>
           </div>
         </div>
       </div>
     </section>
     <!-- Contact -->
-    <footer class="px-3 pt-4 my-md-5 pt-md-5 border-top" id="contact">
+    <section id="contact">
+      <div class="container-fluid px-3">
+        <h2 style="font-weight: bolder;">Contact</h2>
         <div class="row">
-            <div class="col-6 col-md">
+        <div class="col-sm-5" id="contactinfo"> 
+          <p>Contact us and we'll get back to you within 24 hours.</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> Rio Grande Valley, TX</p>
+      <p><span class="glyphicon glyphicon-phone"></span> +1 956-521-0620</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> pmercadorn@yahoo.com</p>
+        </div>
+        <div class="col-sm-7">
+          <div class="row">
+            <div class="col-sm-6 form-group">
+              <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+            </div>
+            <div class="col-sm-6 form-group">
+              <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+            </div>
+          </div>
+          <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+          <div class="row">
+            <div class="col-sm-12 form-group">
+              <button class="btn btn-default pull-right" type="submit">Send</button>
+            </div>
+      </div>
+    </div>
+        </div>
+        </div>
+        
+    </section>
+    <!-- footer -->
+    <footer class="container-fluid py-3 px-3">
                 <img src="./img/mcs.png" alt="" width="110" height="100">
                 <small class="d-block mb-3 text-muted">&#169 2021</small>
-            </div>
-            <div class="col-6 col-md " id="_aMe ">
-                <h2>Contact</h2>
-                <ul class="list-unstyled text-small">
-                    <li class="mb-1">
-                        <a href="mailto:pmercadorn@yahoo.com" class="">Email</a>
-                    </li>
-                    <li class="mb-1">
-                        <a href="">Phone Number: 956-521-0620</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </footer>
     <script src="./Scripts/script.js"></script>
   </body>
