--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
       </nav>
      <div class="jumbotron" id="head">
        <h1 style="font-weight: bolder;">Mercado's Consultant Service</h1>
-       <p > 
-         Offering over 30 years of medicial experience to you with Mobile Service.</p>
-       <p >For All of your Educational Medical and Professional Needs.</p>
+       <p > <small>
+         Offering over 30 years of medicial experience to you with Mobile Service. <br>
+          For All of your Educational Medical and Professional Needs.</small>
      </div>
     </header>
     <!-- About -->
@@ -102,6 +102,7 @@
           <h2 class="card-title" style="font-weight: bolder;">Pedro Mercado</h2>
           <p class="card-text">Nurse Practitioner</p>
           <p class="card-text">
+            <small>
             Emphatic medical professionals with 30+ years in the healthcare
             industry. <br />
             Having lived in the Rio Grande Valley all of my life, I have always
@@ -110,6 +111,7 @@
             you would find in a Office. <br />
             Please take a look at the services we provide at Mercado's
             Consulting Service!
+            </small>
           </p>      
         </div>
       </div>
@@ -120,10 +122,11 @@
     <section id="service">
       <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
         <h1 class="display-4" style="font-weight: bolder;">Services</h1>
-        <p class="fs-5 ">
+        <p class="fs-5 "> <small>
           Below you will find the services that we provide. We are currently
           only <br />
           accepting cash or check. Thank you for understanding.
+        </small>
         </p>
       </div>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
@@ -251,7 +254,7 @@
         <h2 style="font-weight: bolder;">Contact</h2>
         <div class="row">
         <div class="col-sm-5" id="contactinfo"> 
-          <p>Contact us and we'll get back to you within 24 hours.</p>
+          <p><medium>Contact us and we'll get back to you within 24 hours.</medium></p>
       <p><span class="glyphicon glyphicon-map-marker"></span> Rio Grande Valley, TX</p>
       <p><span class="glyphicon glyphicon-phone"></span> +1 956-521-0620</p>
       <p><span class="glyphicon glyphicon-envelope"></span> pmercadorn@yahoo.com</p>
