--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <p><span class="glyphicon glyphicon-phone"></span> +1 956-521-0620</p>
       <p><span class="glyphicon glyphicon-envelope"></span> pmercadorn@yahoo.com</p>
         </div>
-        <div class="col-sm-7">
+        <!-- <div class="col-sm-7">
           <div class="row">
             <div class="col-sm-6 form-group">
               <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
@@ -274,7 +274,7 @@
               <button class="btn btn-default pull-right" type="submit">Send</button>
             </div>
       </div>
-    </div>
+    </div> -->
         </div>
         </div>
         
