--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         visible-lg-block
       "
     >
-      <nav class="navbar navbar-expand-lg" id="nav-bar">
+      <nav class="navbar navbar-expand-lg navbar-light" id="nav-bar">
         <div class="navbar-nav" id="brand-container">
         <img src="./img/logo.png" alt="" width="110" height="100">
         </div>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler collapsed"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
