--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+    <!-- Fa-fa icons -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <!-- My own CSS -->
     <link rel="stylesheet" href="./Styles/styles.css" />
@@ -217,7 +221,7 @@
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4" style="color: #29478d;" >
               <li>Not a Lawyer</li>
-              <li>number</li>
+              <!-- <li>number</li> -->
               <!-- <li>Experation:</li> -->
             </ul>
           </div>
@@ -254,10 +258,10 @@
         <h2 style="font-weight: bolder;">Contact</h2>
         <div class="row">
         <div class="col-sm-5" id="contactinfo"> 
-          <p><medium>Contact us and we'll get back to you within 24 hours.</medium></p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> Rio Grande Valley, TX</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +1 956-521-0620</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> pmercadorn@yahoo.com</p>
+          <p><small>Contact us and we'll get back to you within 24 hours.</small></p>
+      <p><i class='fas fa-map-marker-alt'></i><small> Rio Grande Valley, TX</small></p>
+      <p><span class="glyphicon glyphicon-phone"></span> <small>+1 956-521-0620</small></p>
+      <p><span class="glyphicon glyphicon-envelope"></span> <small>pmercadorn@yahoo.com</small></p>
         </div>
         <!-- <div class="col-sm-7">
           <div class="row">
